linked resume button to resume pdf, and added a home button in nav bar

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             </div>
             <div class="navbar-menu level-right" id="navbarMenu">
                 <div class="navbar-end">
+                    <a href="#heroBody" class="navbar-item level-item"><span>Home</span></a>
                     <a href="#about" class="navbar-item level-item"><span>About</span></a>
                     <a href="#portfolio" class="navbar-item level-item"><span>Portfolio</span></a>
                     <a href="#contact" class="navbar-item level-item"><span>Contact</span></a>
@@ -80,22 +81,22 @@
                                     <li>HTML5/CSS3</li>
                                     <li>JavaScript</li>
                                     <li>jQuery</li>
-                                    <li>React.js</li>
+                                    <!-- <li>React.js</li> -->
                                 </ul>
                             </div>
                             <div class="tile is-child has-text-centered">
                                 <h2 class="title is-4">Backend</h2>
                                 <ul class="content">
                                     <li>Node.js</li>
-                                    <li>Express.js</li>
+                                    <!-- <li>Express.js</li>
                                     <li>MongoDB</li>
-                                    <li>MySQL</li>
+                                    <li>MySQL</li> -->
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </div>
-                <a class="button is-medium is-link is-outlined " href="https://github.com/Arnette110" target="_blank">
+                <a class="button is-medium is-link is-outlined " href="/assets/resume/christopher-ellis-resume.pdf" target="_blank">
                         <span class="icon">
                             <i class="far fa-2x fa-file-pdf"></i>
                         </span>
