--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         <!-- footer end -->
 
 
-        <script src="/assets/js/script.js"></script>
+        <script src="./assets/js/script.js"></script>
     </body>
 
 </html>
