--- a/index.html
+++ b/index.html
@@ -55,37 +55,40 @@
                     <br>
                 </div>
 
-            </div>
-            <div class="columns" id="aboutContainer">
 
-                <!-- profile image -->
-                <div class="column is-one-fifth">
-                    <figure class="image">
-                        <img src="./assets/images/ChrisEllis.jpg" alt="picture of christopher ellis">
-                    </figure>
-                </div>
+                <div class="columns" id="aboutContainer">
 
-                <!-- about me content -->
-                <div class="column">
-                    <div class="content is-medium">
-                        <article id="aboutContent">
-                            <p>
-                                I am currently studying Full Stack Web Development at the University of Utah's coding
-                                boot camp.
-                            </p>
-                            <p>
-                                I am proficient in <strong> HTML, CSS (Bootstrap and Bulma), JavaScript/jQuery</strong>.
-                                I have completed multiple projects that incorporated <strong>jQuery.ajax()</strong> and
-                                I have just started learning <strong>Node.js</strong>. Soon I will have experience
-                                with<strong>React, Express, MongoDB and SQL/MySQL!</strong>
-                            </p>
-                        </article>
+                    <!-- profile image -->
+                    <div class="column is-one-fifth">
+                        <figure class="image">
+                            <img src="./assets/images/ChrisEllis.jpg" alt="picture of christopher ellis">
+                        </figure>
                     </div>
 
+                    <!-- about me content -->
+                    <div class="column">
+                        <div class="content is-medium">
+                            <article id="aboutContent">
+                                <p>
+                                    I am currently studying Full Stack Web Development at the University of Utah's
+                                    coding
+                                    boot camp.
+                                </p>
+                                <p>
+                                    I am proficient in <strong> HTML, CSS (Bootstrap and Bulma),
+                                        JavaScript/jQuery</strong>.
+                                    I have completed multiple projects that incorporated <strong>jQuery.ajax()</strong>
+                                    and
+                                    I have just started learning <strong>Node.js</strong>. Soon I will have experience
+                                    with<strong>React, Express, MongoDB and SQL/MySQL!</strong>
+                                </p>
+                            </article>
+                        </div>
+
+                    </div>
                 </div>
-            </div>
-            <!-- potential future styling -->
-            <!-- <div class="tile is-parent">
+                <!-- potential future styling -->
+                <!-- <div class="tile is-parent">
                 <div class="tile is-child has-text-centered">
                     <h2 class="title is-4">Frontend</h2>
                     <ul class="content">
@@ -105,17 +108,17 @@
                     </ul>
                 </div>
             </div> -->
-            <!-- potential future styling -->
+                <!-- potential future styling -->
 
-            <!-- resume' button -->
-            <a class="button is-medium is-link is-outlined " id="resume"
-                href="assets/resume/christopher-ellis-resume.pdf" target="_blank">
-                <span class="icon">
-                    <i class="far fa-2x fa-file-pdf"></i>
-                </span>
-                <span>My Resume'</span>
-            </a>
-
+                <!-- resume' button -->
+                <a class="button is-medium is-link is-outlined " id="resume"
+                    href="assets/resume/christopher-ellis-resume.pdf" target="_blank">
+                    <span class="icon">
+                        <i class="far fa-2x fa-file-pdf"></i>
+                    </span>
+                    <span>My Resume'</span>
+                </a>
+            </div>
         </section>
         <!-- about section end -->
 
