added dynamic team generator to portfolio

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <!-- portfolio heading end -->
 
                 <!-- portfolio content start -->
-                <div class="columns">
+                <div class="columns is-multiline">
                     <div class="column is-4">
                         <div class="card">
                             <header class="card-header">
@@ -195,6 +195,25 @@
                                 <a href="https://arnette110.github.io/Wonderful-Workday-Planner/" target="_blank"
                                     class="card-footer-item">Deployed</a>
                                 <a href="https://github.com/Arnette110/Wonderful-Workday-Planner" target="_blank"
+                                    class="card-footer-item">Source
+                                    Code</a>
+                            </footer>
+                        </div>
+                    </div>
+                    <div class="column is-4">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title">
+                                    <span>Dynamic Team Generator</span>
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <figure class="image is-16by9">
+                                    <img src="./assets/images/team-generator.gif" alt="team generator gif">
+                                </figure>
+                            </div>
+                            <footer class="card-footer">
+                                <a href="https://github.com/Arnette110/Dynamic-Team-Generator" target="_blank"
                                     class="card-footer-item">Source
                                     Code</a>
                             </footer>
