added burger app to portfolio and screenshot for burger app to images

--- a/index.html
+++ b/index.html
@@ -139,6 +139,28 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title">
+                                    <span>GalactChris Devourer Of Burgers</span>
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <figure class="image is-16by9">
+                                    <img src="./assets/images/screenshot-GalactChris Devourer Of Burgers.png"
+                                        alt="burger app screenshot">
+                                </figure>
+                            </div>
+                            <footer class="card-footer">
+                                <a href="https://sheltered-citadel-94305.herokuapp.com/" target="_blank"
+                                    class="card-footer-item">Deployed</a>
+                                <a href="https://github.com/Arnette110/GalactChris-devourer-of-burgers" target="_blank"
+                                    class="card-footer-item">Source
+                                    Code</a>
+                            </footer>
+                        </div>
+                    </div>
+                    <div class="column is-4">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title">
                                     <span>Scrabble Party App</span>
                                 </p>
                             </header>
