edited line 43 to include full stack, added proficiencies in about, updated resume path, and added projects in portfolio

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         Christopher Ellis
                     </h1>
                     <h2 class="subtitle" id="heroSub">
-                        web developer
+                        full stack web developer
                     </h2>
                 </div>
             </div>
@@ -70,17 +70,17 @@
                         <div class="content is-medium">
                             <article id="aboutContent">
                                 <p>
-                                    I am currently studying Full Stack Web Development at the University of Utah's
+                                    I am currently studying <strong>Full Stack Web Development</strong> at the <strong>
+                                    University of Utah's</strong>
                                     coding
                                     boot camp.
                                 </p>
                                 <p>
                                     I am proficient in <strong> HTML, CSS (Bootstrap and Bulma),
-                                        JavaScript/jQuery</strong>.
-                                    I have completed multiple projects that incorporated <strong>jQuery.ajax()</strong>
-                                    and
-                                    I have just started learning <strong>Node.js</strong>. Soon I will have experience
-                                    with<strong>React, Express, MongoDB and SQL/MySQL!</strong>
+                                    JavaScript/jQuery, Node, Express, Handlebars</strong> and
+                                    <strong>SQL/MySQL/Sequelize</strong>.
+                                    I have completed multiple projects that incorporated <strong>jQuery.ajax()/axios</strong> along with many other node modules. I have just started learning about <strong>NoSQL</strong> database solutions using
+                                    <strong>MongoDB</strong>.
                                 </p>
                             </article>
                         </div>
@@ -112,7 +112,7 @@
 
                 <!-- resume' button -->
                 <a class="button is-medium is-link is-outlined " id="resume"
-                    href="assets/resume/christopher-ellis-resume.pdf" target="_blank">
+                    href="assets/resume/CHRISTOPHER ELLIS_Resume.doc (1).pdf" target="_blank">
                     <span class="icon">
                         <i class="far fa-2x fa-file-pdf"></i>
                     </span>
@@ -139,6 +139,28 @@
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title">
+                                    <span>Stock Watcher!</span>
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <figure class="image is-16by9">
+                                    <img src="./assets/images/2020-03-18 15_07_28-Stock Watcher!.png"
+                                        alt="stock app screenshot">
+                                </figure>
+                            </div>
+                            <footer class="card-footer">
+                                <a href="https://quiet-scrubland-40925.herokuapp.com/" target="_blank"
+                                    class="card-footer-item">Deployed</a>
+                                <a href="https://github.com/Arnette110/stock-shares-viewer" target="_blank"
+                                    class="card-footer-item">Source
+                                    Code</a>
+                            </footer>
+                        </div>
+                    </div>
+                    <div class="column is-4">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title">
                                     <span>GalactChris Devourer Of Burgers</span>
                                 </p>
                             </header>
@@ -152,6 +174,66 @@
                                 <a href="https://sheltered-citadel-94305.herokuapp.com/" target="_blank"
                                     class="card-footer-item">Deployed</a>
                                 <a href="https://github.com/Arnette110/GalactChris-devourer-of-burgers" target="_blank"
+                                    class="card-footer-item">Source
+                                    Code</a>
+                            </footer>
+                        </div>
+                    </div>
+                    <div class="column is-4">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title">
+                                    <span>Notable Note Taker</span>
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <figure class="image is-16by9">
+                                    <img src="./assets/images/2020-02-10 18_00_45-Note Taker.png"
+                                        alt="note taker app screenshot">
+                                </figure>
+                            </div>
+                            <footer class="card-footer">
+                                <a href="https://agile-peak-63140.herokuapp.com/" target="_blank"
+                                    class="card-footer-item">Deployed</a>
+                                <a href="https://github.com/Arnette110/Notable-Note-Taker" target="_blank"
+                                    class="card-footer-item">Source
+                                    Code</a>
+                            </footer>
+                        </div>
+                    </div>
+                    <div class="column is-4">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title">
+                                    <span>Dynamic Team Generator</span>
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <figure class="image is-16by9">
+                                    <img src="./assets/images/team-generator.gif" alt="team generator gif">
+                                </figure>
+                            </div>
+                            <footer class="card-footer">
+                                <a href="https://github.com/Arnette110/Dynamic-Team-Generator" target="_blank"
+                                    class="card-footer-item">Source
+                                    Code</a>
+                            </footer>
+                        </div>
+                    </div>
+                    <div class="column is-4">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title">
+                                    <span>PDF Generator</span>
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <figure class="image is-16by9">
+                                    <img src="./assets/images/profile-generator.gif" alt="PDF generator gif">
+                                </figure>
+                            </div>
+                            <footer class="card-footer">
+                                <a href="https://github.com/Arnette110/PDF-Generator" target="_blank"
                                     class="card-footer-item">Source
                                     Code</a>
                             </footer>
@@ -222,25 +304,7 @@
                             </footer>
                         </div>
                     </div>
-                    <div class="column is-4">
-                        <div class="card">
-                            <header class="card-header">
-                                <p class="card-header-title">
-                                    <span>Dynamic Team Generator</span>
-                                </p>
-                            </header>
-                            <div class="card-content">
-                                <figure class="image is-16by9">
-                                    <img src="./assets/images/team-generator.gif" alt="team generator gif">
-                                </figure>
-                            </div>
-                            <footer class="card-footer">
-                                <a href="https://github.com/Arnette110/Dynamic-Team-Generator" target="_blank"
-                                    class="card-footer-item">Source
-                                    Code</a>
-                            </footer>
-                        </div>
-                    </div>
+
                 </div>
                 <!-- portfolio content end -->
             </div>
